@@ -1,10 +1,9 @@
 package com.example.community_education.Tool.encryption;
 
-import sun.misc.BASE64Encoder;
-
 import java.io.UnsupportedEncodingException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 
 /**
  * 加密
@@ -14,9 +13,9 @@ public class MDFive {
 
         //确定算法
         MessageDigest md5 = MessageDigest.getInstance("MD5");
-        BASE64Encoder base64en = new BASE64Encoder();
+        Base64.Encoder base64en = Base64.getEncoder();
         //加密后的字符串
-        String newstr = base64en.encode(md5.digest(str.getBytes("utf-8")));
+        String newstr = base64en.encodeToString(md5.digest(str.getBytes("utf-8")));
         return newstr;
     }
 
